tests/baselines/reference/recursiveConditionalCrash5.errors.txt
recursiveConditionalCrash5.ts(3,60): error TS2589: Type instantiation is excessively deep and possibly infinite.


==== recursiveConditionalCrash5.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/63040
    
    type StringTreeArrayAsTuple<T> = (T extends [...infer R] ? [...StringTreeArrayAsTuple<R>] : never) & boolean;
                                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2589: Type instantiation is excessively deep and possibly infinite.
    